Update satchel contents to 1.20.1